src/objects/Sync_Investigation__mdt.object
<CustomObject>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Sync Investigation</label>
    <pluralLabel>Sync Investigations</pluralLabel>
</CustomObject>